--- a/src/app/issuer/components/badgeclass-issue-bulk-award/badgeclass-issue-bulk-award.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award/badgeclass-issue-bulk-award.component.html
@@ -28,7 +28,7 @@
 				</Badgeclass-issue-bulk-award-preview>
 			}
 
-			@if (viewState === 'importConformation') {
+			@if (viewState === 'importConfirmation') {
 				<badgeclass-issue-bulk-award-confirmation
 					[transformedImportData]="transformedImportData"
 					(updateStateEmitter)="updateViewState($event)"
