feat: disable submit button for invalid emails

--- a/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
+++ b/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
@@ -370,7 +370,11 @@
 					</oeb-button>
 					<oeb-button
 						type="submit"
-						[disabled]="!!issueBadgeFinished"
+						[disabled]="
+							!!issueBadgeFinished ||
+							issueForm.rawControlMap.recipient_identifier?.hasError('invalidEmail') ||
+							issueForm.rawControlMap.recipient_identifier?.hasError('required')
+						"
 						[loading-promises]="[issueBadgeFinished]"
 						[loading-message]="'Issuer.badgeAwardInProgress' | translate"
 						[text]="'Issuer.giveBadge' | translate"
