--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -227,9 +227,14 @@
 					<h2
 						class="tw-font-medium md:tw-text-[22px] md:tw-leading-[26.4px] tw-text-purple tw-text-[16px] tw-leading-[19.2px] tw-py-4 oeb-break-words"
 					>
-						{{ issuer.name }} {{ 'Issuer.issuerHasBadges' | translate }} {{ learningPaths.length }} Micro
-						Degree{{ learningPaths.length === 1 ? '' : 's' }}.
+						{{ issuer.name }}
+						{{ 'Issuer.issuerHasBadges' | translate }}
+						{{ learningPaths.length }}
+						{{
+							(learningPaths.length === 1 ? 'General.learningPath' : 'General.learningPaths') | translate
+						}}.
 					</h2>
+
 					<learningpaths-datatable
 						*ngIf="!public"
 						[learningPaths]="apiLearningPaths"
