--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -114,7 +114,7 @@
 										<div class="tw-gap-6 tw-grid tw-grid-cols-badges" [@stagger]>
 											@for (
 												badgeResult of badgeResults;
-												track trackById($index, badgeResult.badge, sortOrder)
+												track trackById($index, badgeResult.badge)
 											) {
 												<bg-badgecard
 													@appearAnimation
