Fix/qrcode expiration (#1692)
* feat: validate on public request component

* feat: generalize not found component

* feat: translations

* feat: add spinner

---------

Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/issuer/components/request-badge/request-badge.component.html
+++ b/src/app/issuer/components/request-badge/request-badge.component.html
@@ -1,82 +1,94 @@
 <ng-template [bgAwaitPromises]="badgeClassLoaded">
-	<div class="page-padding oeb">
-		<div class="oeb-headline-container-sm">
-			<h1 hlmH1 class="tw-text tw-text-oebblack">{{ 'RequestBadge.requestBadge' | translate }}:</h1>
-			<h1 hlmH1 class="tw-text-purple tw-font-extrabold">{{ badgeClass.name }}</h1>
-		</div>
-		<div class="tw-flex tw-gap-4 tw-mt-4 tw-items-center oeb-max-form-width">
-			<div class="tw-flex tw-items-center tw-bg-white tw-mx-auto tw-rounded-[20px]">
-				<img
-					class="tw-w-[120.88px] tw-min-w-[120.88px] md:tw-w-[172.69px] tw-mx-auto tw-block"
-					[loaded-src]="badgeClass.image"
-					[loading-src]="badgeLoadingImageUrl"
-					[error-src]="badgeFailedImageUrl"
-				/>
+	@if (qrCodeLoading) {
+		<main>
+			<div class="page-padding oeb tw-flex tw-justify-center tw-items-center tw-min-h-screen">
+				<oeb-spinner [text]="'General.loading' | translate" size="lg"></oeb-spinner>
 			</div>
-			<div>
-				<p hlmP>
-					{{ 'RequestBadge.fillForm' | translate }}
-				</p>
-				<p hlmP>
-					{{ 'RequestBadge.requestBadgeInfo1' | translate }}
-					<span class="tw-italic">{{ badgeClass.name }}</span>
-					{{ 'RequestBadge.requestBadgeInfo2' | translate }}
-				</p>
+		</main>
+	} @else if (qrCodeValid) {
+		<div class="page-padding oeb">
+			<div class="oeb-headline-container-sm">
+				<h1 hlmH1 class="tw-text tw-text-oebblack">{{ 'RequestBadge.requestBadge' | translate }}:</h1>
+				<h1 hlmH1 class="tw-text-purple tw-font-extrabold">{{ badgeClass.name }}</h1>
+			</div>
+			<div class="tw-flex tw-gap-4 tw-mt-4 tw-items-center oeb-max-form-width">
+				<div class="tw-flex tw-items-center tw-bg-white tw-mx-auto tw-rounded-[20px]">
+					<img
+						class="tw-w-[120.88px] tw-min-w-[120.88px] md:tw-w-[172.69px] tw-mx-auto tw-block"
+						[loaded-src]="badgeClass.image"
+						[loading-src]="badgeLoadingImageUrl"
+						[error-src]="badgeFailedImageUrl"
+					/>
+				</div>
+				<div>
+					<p hlmP>
+						{{ 'RequestBadge.fillForm' | translate }}
+					</p>
+					<p hlmP>
+						{{ 'RequestBadge.requestBadgeInfo1' | translate }}
+						<span class="tw-italic">{{ badgeClass.name }}</span>
+						{{ 'RequestBadge.requestBadgeInfo2' | translate }}
+					</p>
+				</div>
+			</div>
+
+			<div class="oeb-section-sm oeb-max-form-width">
+				<form [formGroup]="requestForm.rawControl" (ngSubmit)="onSubmit()" novalidate>
+					<div class="tw-flex tw-flex-col">
+						<oeb-input
+							[label]="'Signup.fName' | translate"
+							[placeholder]=""
+							fieldType="text"
+							[control]="requestForm.rawControlMap.firstname"
+						></oeb-input>
+						<oeb-input
+							[label]="'Signup.lName' | translate"
+							[placeholder]=""
+							fieldType="text"
+							[control]="requestForm.rawControlMap.lastname"
+						></oeb-input>
+						<p
+							hlmP
+							size="sm"
+							id="nameValidationError"
+							[hidden]="!requestForm.hasError('maxLengthExceeded')"
+							class="tw-font-normal tw-text-red tw-text-start tw-w-full tw-mt-2"
+						>
+							{{ 'RequestBadge.nameValidationError' | translate }}
+						</p>
+						<oeb-input
+							label="E-Mail"
+							[placeholder]=""
+							fieldType="email"
+							[control]="requestForm.rawControlMap.email"
+						>
+							></oeb-input
+						>
+						<oeb-input fieldType="hidden" [control]="requestForm.rawControlMap.qrCodeId"></oeb-input>
+					</div>
+
+					<div class="oeb-standard-padding-bottom">
+						<p hlmP class="tw-mt-6 md:tw-mt-7 tw-text-oebblack tw-leading-[18.2px] tw-mb-2">
+							<span [innerHTML]="'RequestBadge.personalDataInfo' | translate"></span>
+						</p>
+
+						<oeb-checkbox
+							id="age-confirmation"
+							name="age-confirmation"
+							type="checkbox"
+							[text]="'RequestBadge.ageConfirmation' | translate"
+							[multiLineText]="true"
+							[control]="requestForm.rawControlMap.ageConfirmation"
+						>
+						</oeb-checkbox>
+					</div>
+					<oeb-button type="submit" [text]="'RequestBadge.requestBadge' | translate"> </oeb-button>
+				</form>
 			</div>
 		</div>
-
-		<div class="oeb-section-sm oeb-max-form-width">
-			<form [formGroup]="requestForm.rawControl" (ngSubmit)="onSubmit()" novalidate>
-				<div class="tw-flex tw-flex-col">
-					<oeb-input
-						[label]="'Signup.fName' | translate"
-						[placeholder]=""
-						fieldType="text"
-						[control]="requestForm.rawControlMap.firstname"
-					></oeb-input>
-					<oeb-input
-						[label]="'Signup.lName' | translate"
-						[placeholder]=""
-						fieldType="text"
-						[control]="requestForm.rawControlMap.lastname"
-					></oeb-input>
-					<p
-						hlmP
-						size="sm"
-						id="nameValidationError"
-						[hidden]="!requestForm.hasError('maxLengthExceeded')"
-						class="tw-font-normal tw-text-red tw-text-start tw-w-full tw-mt-2"
-					>
-						{{ 'RequestBadge.nameValidationError' | translate }}
-					</p>
-					<oeb-input
-						label="E-Mail"
-						[placeholder]=""
-						fieldType="email"
-						[control]="requestForm.rawControlMap.email"
-					>
-						></oeb-input
-					>
-					<oeb-input fieldType="hidden" [control]="requestForm.rawControlMap.qrCodeId"></oeb-input>
-				</div>
-
-				<div class="oeb-standard-padding-bottom">
-					<p hlmP class="tw-mt-6 md:tw-mt-7 tw-text-oebblack tw-leading-[18.2px] tw-mb-2">
-						<span [innerHTML]="'RequestBadge.personalDataInfo' | translate"></span>
-					</p>
-
-					<oeb-checkbox
-						id="age-confirmation"
-						name="age-confirmation"
-						type="checkbox"
-						[text]="'RequestBadge.ageConfirmation' | translate"
-						[multiLineText]="true"
-						[control]="requestForm.rawControlMap.ageConfirmation"
-					>
-					</oeb-checkbox>
-				</div>
-				<oeb-button type="submit" [text]="'RequestBadge.requestBadge' | translate"> </oeb-button>
-			</form>
-		</div>
-	</div>
+	} @else {
+		<main>
+			<bg-not-found [messageKey]="'QrCode.expired'" />
+		</main>
+	}
 </ng-template>
