Fix/bulk award invalid emails (#1691)
* fix: typo

* feat: add icon size input

* feat: icon sizes

* feat: tld list

* feat: translations

* feat: edit invalid emails

* feat: standardize and improve email validation across components

* feat: issue component email errors

* feat: disable submit button for invalid emails

* fix: valid email check

---------

Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
+++ b/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
@@ -82,8 +82,15 @@
 							[ariaLabel]="'Issuer.recipientEmail' | translate"
 							[fieldType]="recipientIdentifierFieldType"
 							[noTopMargin]="true"
+							[errorMessage]="{ invalidEmail: 'Issuer.enterValidEmail' | translate }"
 						></oeb-input>
-						<p class="tw-text-purple tw-italic tw-mt-2 tw-text-sm">
+						<p
+							class="tw-text-purple tw-italic tw-mt-2 tw-text-sm"
+							[class.tw-mt-6]="
+								issueForm.rawControlMap.recipient_identifier?.hasError('invalidEmail') ||
+								issueForm.rawControlMap.recipient_identifier?.hasError('required')
+							"
+						>
 							{{ 'Issuer.emailIsIdentifier' | translate }}
 						</p>
 					</div>
@@ -363,7 +370,11 @@
 					</oeb-button>
 					<oeb-button
 						type="submit"
-						[disabled]="!!issueBadgeFinished"
+						[disabled]="
+							!!issueBadgeFinished ||
+							issueForm.rawControlMap.recipient_identifier?.hasError('invalidEmail') ||
+							issueForm.rawControlMap.recipient_identifier?.hasError('required')
+						"
 						[loading-promises]="[issueBadgeFinished]"
 						[loading-message]="'Issuer.badgeAwardInProgress' | translate"
 						[text]="'Issuer.giveBadge' | translate"
