Fix/network dev findings (#1683)
* fix: capitalize

* fix: sublabel signal

* fix: add translation

* fix: add max height for dropdown

* fix: dont allow networks to create lps

* fix: include searching for networks on badge detail

* fix: dynamic translation

* fix: disable button

* fix: translation

* feat: add failure dialog variant

* fix: constrain filter to issuer networks

* fix: filter out partner badges from network badges

* fix: translation, uppercase

* feat: add network image to config

* fix: images in partner table

* fix: missing translation

* fix: missing translations

* fix: links, translations...

* fix: show assertion image, not badge img

* fix: breadcrumb, rm context

* fix: permission checks

* fix: simplify translations for proper capitalization

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/app/catalog/components/network-catalog/network-catalog.component.html
+++ b/src/app/catalog/components/network-catalog/network-catalog.component.html
@@ -19,7 +19,11 @@
 					<oeb-networkcard
 						@appearAnimation
 						[network]="network"
-						[routerLink]="['/public/networks', network.slug]"
+						[routerLink]="
+							network.current_user_network_role
+								? ['/issuer/networks', network.slug]
+								: ['/public/networks', network.slug]
+						"
 					></oeb-networkcard>
 				}
 			</div>
