fix: workaround disable button

--- a/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
@@ -116,7 +116,7 @@
 		<oeb-button
 			[class.button-is-disabled]="buttonDisabledClass"
 			[disabled]="buttonDisabledAttribute || hasInvalidEmails"
-			(click)="dataConfirmed()"
+			(click)="!hasInvalidEmails && dataConfirmed()"
 			text="{{ 'Issuer.giveBadges' | translate }}"
 		>
 		</oeb-button>
