feat: add button variants

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -91,6 +91,7 @@
 						<oeb-button
 							img="assets/logos/mein-bildungsraum.svg"
 							variant="blackborder"
+							[weight]="'medium'"
 							[text]="'Login.loginBildungsraum' | translate"
 							(click)="bildungsraumLogin()"
 							[disabled]="isOidcDisabled()"
