fix: use correct images for learning paths

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -256,9 +256,8 @@
 										[studyLoad]="calculateStudyLoad(lp)"
 										[completed]="false"
 										[requested]="lp.requested"
-										[progress]="lp.progress"
 										[matchOrProgress]="undefined"
-										[badgeImage]="$any(lp).image"
+										[badgeImage]="lp.participationBadge_image"
 									></bg-learningpathcard>
 								}
 							}
