--- a/src/app/public/components/badgeclass/badgeclass.component.html
+++ b/src/app/public/components/badgeclass/badgeclass.component.html
@@ -10,7 +10,7 @@
 					@for (lp of learningPaths; track lp) {
 						<bg-learningpathcard
 							[name]="lp.name"
-							[badgeImage]="lp.image"
+							[badgeImage]="lp.participationBadge_image"
 							[issuerTitle]="lp.issuer_name"
 							[description]="lp.description"
 							[slug]="lp.slug"
