--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -402,7 +402,7 @@
 										@if (lp.activated) {
 											<bg-learningpathcard
 												[name]="lp.name"
-												[badgeImage]="$any(lp).participationBadge_image"
+												[badgeImage]="lp.participationBadge_image"
 												[issuerTitle]="lp.issuer_name"
 												[description]="lp.description"
 												[slug]="lp.slug"
