fix: add proper button loading messages
 for login and signup buttons including translations

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -80,7 +80,7 @@
 									[disabled]="!!loginFinished"
 									text="Login"
 									[loading-promises]="[loginFinished]"
-									loading-message="Signing In"
+									loading-message="{{ 'Login.loggingIn' | translate }}"
 								>
 								</oeb-button>
 							</div>
