--- a/src/app/signup/components/signup/signup.component.html
+++ b/src/app/signup/components/signup/signup.component.html
@@ -552,7 +552,7 @@
 									[disabled]="!!signupFinished"
 									text="{{ 'Signup.createAccount' | translate }}"
 									[loading-promises]="[signupFinished]"
-									loading-message="Signing Up..."
+									loading-message="{{ 'Signup.signingUp' | translate }}"
 								>
 								</oeb-button>
 								<!-- TO DO: Add a destination -->
