--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -316,8 +316,8 @@
 						[badgeImage]="badge.badge.image"
 						[badgeDescription]="badge.badge.description"
 						[badgeSlug]="badge.badge.slug"
-						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.badge.issuer"
-						[badgeIssueDate]="badge.badge.createdAt"
+						[issuerTitle]="badge.issuerName"
+						[badgeIssueDate]="$any(badge.badge).created_at"
 						[public]="true"
 						[publicUrl]="`../../public/badges/${badge.badge.slug}`"
 					></bg-badgecard>
