--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -53,71 +53,103 @@
 				<input [formControl]="qrForm.rawControlMap.badgeclass_id" type="hidden" />
 				<input [formControl]="qrForm.rawControlMap.issuer_id" type="hidden" />
 
-				<span
-					class="tw-mt-6 md:tw-mt-7 tw-text-oebblack tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
-					>{{ 'QrCode.expiration' | translate }} <span class="tw-font-normal">(optional)</span></span
-				>
-
-				@if (!editing) {
-					<div class="tw-flex tw-flex-col xl:tw-flex-row tw-gap-2 tw-justify-between xl:tw-items-end">
-						<div class="tw-flex md:tw-justify-between tw-gap-12">
-							<oeb-input
-								labelStyle="tw-text-oebblack"
-								[label]="'QrCode.expirationStart' | translate"
-								[errorMessage]="{
-									invalidDate: 'QrCode.invalidDate' | translate,
-								}"
-								[control]="qrForm.rawControlMap.valid_from"
-								fieldType="date"
-							></oeb-input>
-							<oeb-input
-								labelStyle="tw-text-oebblack"
-								[label]="'QrCode.expirationEnd' | translate"
-								[errorMessage]="{
-									expiresBeforeValidFrom: ('QrCode.invalidDateRange' | translate),
-									invalidDate: ('QrCode.invalidDate' | translate),
-								}"
-								[control]="qrForm.rawControlMap.expires_at"
-								fieldType="date"
-							></oeb-input>
-						</div>
-					</div>
-					@if (qrForm.hasError('noStartDate')) {
-						<p id="noStartDateError" [hidden]="!qrForm.hasError('noStartDate')" class="tw-text-red tw-mb-2">
-							{{ 'QrCode.missingStartDate' | translate }}
-						</p>
-					}
-				} @else {
-					<div class="tw-flex tw-gap-12">
+				<!-- Activity/Course Dates Section -->
+				<div class="tw-mt-6 md:tw-mt-8 tw-flex tw-bg-white tw-rounded-[5px] tw-p-4 tw-flex-col tw-gap-2">
+					<span
+						class="tw-mb-2 tw-text-oebblack tw-text-lg tw-uppercase tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
+					>
+						@if (!editing) {
+							<span class="tw-font-normal tw-italic">Optional:</span>
+						}
+						{{ 'RecBadge.courseDate' | translate }}
+					</span>
+					<div class="tw-flex tw-flex-col md:tw-flex-row tw-gap-4">
 						<oeb-input
+							[noTopMargin]="true"
+							labelStyle="tw-text-oebblack"
+							[label]="'General.start' | translate"
+							[errorMessage]="{
+								invalidDate: 'QrCode.invalidDate' | translate,
+							}"
+							[control]="qrForm.rawControlMap.activity_start_date"
+							fieldType="date"
+						></oeb-input>
+						<oeb-input
+							[noTopMargin]="true"
+							labelStyle="tw-text-oebblack"
+							[label]="'General.end' | translate"
+							[errorMessage]="{
+								activityEndBeforeStart: 'QrCode.invalidDateRange' | translate,
+								invalidDate: 'QrCode.invalidDate' | translate,
+							}"
+							[control]="qrForm.rawControlMap.activity_end_date"
+							fieldType="date"
+						></oeb-input>
+					</div>
+				</div>
+
+				@if (qrForm.hasError('noStartDate')) {
+					<p id="noStartDateError" [hidden]="!qrForm.hasError('noStartDate')" class="tw-text-red tw-mb-2">
+						{{ 'QrCode.missingStartDate' | translate }}
+					</p>
+				}
+
+				<!-- QR Code Expiration -->
+				<div class="tw-mt-6 md:tw-mt-8 tw-flex tw-bg-white tw-rounded-[5px] tw-p-4 tw-flex-col tw-gap-2">
+					<span
+						class="tw-text-oebblack tw-text-lg tw-uppercase tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
+					>
+						@if (!editing) {
+							<span class="tw-font-normal tw-italic">Optional:</span>
+						}
+						{{ 'QrCode.expiration' | translate }}
+					</span>
+					<div class="tw-flex tw-flex-col md:tw-flex-row tw-gap-4">
+						<oeb-input
+							[noTopMargin]="true"
+							labelStyle="tw-text-oebblack"
 							[label]="'QrCode.expirationStart' | translate"
-							[errorMessage]="'QrCode.invalidDate' | translate"
+							[errorMessage]="{
+								invalidDate: 'QrCode.invalidDate' | translate,
+							}"
 							[control]="qrForm.rawControlMap.valid_from"
 							fieldType="date"
 						></oeb-input>
 						<oeb-input
+							[noTopMargin]="true"
+							labelStyle="tw-text-oebblack"
 							[label]="'QrCode.expirationEnd' | translate"
-							[errorMessage]="'QrCode.invalidDate' | translate"
+							[errorMessage]="{
+								expiresBeforeValidFrom: ('QrCode.invalidExpirationDateRange' | translate),
+								invalidDate: ('QrCode.invalidDate' | translate),
+							}"
 							[control]="qrForm.rawControlMap.expires_at"
 							fieldType="date"
 						></oeb-input>
 					</div>
-					@if (qrForm.hasError('noStartDate')) {
-						<p id="noStartDateError" [hidden]="!qrForm.hasError('noStartDate')" class="tw-text-red tw-mb-2">
-							{{ 'QrCode.missingStartDate' | translate }}
-						</p>
-					}
+				</div>
+
+				<!-- Notifications Section -->
+				@if (editing) {
 					<span
-						class="tw-mt-6 md:tw-mt-7 tw-text-oebblack tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
-						>{{ 'General.notification' | translate }}</span
+						class="tw-mt-8 md:tw-mt-10 tw-text-oebblack tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
 					>
-					<oeb-checkbox
-						class="oeb-standard-padding-bottom"
-						type="checkbox"
-						[text]="'QrCode.receiveEmails' | translate"
-						[control]="qrForm.rawControlMap.notifications"
-					>
-					</oeb-checkbox>
+						{{ 'General.notification' | translate }}
+					</span>
+				}
+
+				<oeb-checkbox
+					[class]="
+						editing ? 'oeb-standard-padding-bottom' : 'oeb-standard-padding-bottom md:tw-mt-10 tw-mt-6'
+					"
+					type="checkbox"
+					[text]="'QrCode.receiveEmails' | translate"
+					[control]="qrForm.rawControlMap.notifications"
+				>
+				</oeb-checkbox>
+
+				<!-- Action Buttons -->
+				@if (editing) {
 					<div class="tw-flex tw-flex-col md:tw-flex-row tw-gap-4 tw-mt-2 tw-w-full">
 						<oeb-button
 							variant="secondary"
@@ -135,25 +167,7 @@
 						>
 						</oeb-button>
 					</div>
-				}
-
-				@if (!editing) {
-					<div>
-						<span
-							class="tw-mt-6 md:tw-mt-7 tw-text-oebblack tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
-							>{{ 'General.notification' | translate }}</span
-						>
-						<oeb-checkbox
-							class="oeb-standard-padding-bottom"
-							type="checkbox"
-							[text]="'QrCode.receiveEmails' | translate"
-							[control]="qrForm.rawControlMap.notifications"
-						>
-						</oeb-checkbox>
-					</div>
-				}
-
-				@if (!editing) {
+				} @else {
 					<oeb-button
 						class="tw-whitespace-nowrap tw-mt-6"
 						type="submit"
