--- a/src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.html
+++ b/src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.html
@@ -26,7 +26,7 @@
 							[state]="{ issuer: issuer }"
 							[attr.data-umami-event]="'create-participation-badge-1'"
 						>
-							<img src="../../../../breakdown/static/badgestudio/shapes/participation.svg" />
+							<img src="breakdown/static/badgestudio/shapes/participation.svg" />
 							<strong>{{ 'Badge.categories.participation' | translate }}</strong>
 							<p [innerHTML]="'Badge.participationBadgeInfo' | translate"></p>
 						</a>
@@ -35,7 +35,7 @@
 							[state]="{ issuer: issuer }"
 							[attr.data-umami-event]="'create-competency-badge-1'"
 						>
-							<img src="../../../../breakdown/static/badgestudio/shapes/competency.svg" />
+							<img src="breakdown/static/badgestudio/shapes/competency.svg" />
 							<strong>{{ 'Badge.categories.competency' | translate }}</strong>
 							<p [innerHTML]="'Badge.competencyBadgeInfo' | translate"></p>
 						</a>
@@ -45,7 +45,7 @@
 								[state]="{ issuer: issuer }"
 								[attr.data-umami-event]="'create-micro-degree-1'"
 							>
-								<img src="../../../../breakdown/static/badgestudio/shapes/learningpath.svg" />
+								<img src="breakdown/static/badgestudio/shapes/learningpath.svg" />
 
 								<strong>{{ 'Badge.categories.learningpath' | translate }}</strong>
 								<p [innerHTML]="'Badge.learningPathBadgeInfo' | translate"></p>
