feat: use dropdown in add institution component

--- a/src/app/issuer/components/add-institution/add-institution.component.html
+++ b/src/app/issuer/components/add-institution/add-institution.component.html
@@ -86,7 +86,7 @@
 			}
 		</section>
 		<oeb-button
-			[disabled]="!selectedIssuers.length"
+			[disabled]="!selectedIssuers.length || inviting"
 			(click)="inviteInstitutions(selectedIssuers)"
 			[text]="'Network.addInstitutions' | translate"
 		>
