--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -256,9 +256,8 @@
 										[studyLoad]="calculateStudyLoad(lp)"
 										[completed]="false"
 										[requested]="lp.requested"
-										[progress]="lp.progress"
 										[matchOrProgress]="undefined"
-										[badgeImage]="$any(lp).image"
+										[badgeImage]="lp.participationBadge_image"
 									></bg-learningpathcard>
 								}
 							}
@@ -289,7 +288,7 @@
 			<ng-template [bgAwaitPromises]="requestsLoaded">
 				<badges-datatable
 					*ngIf="!public"
-					[badges]="badgeResults"
+					[badges]="$any(badgeResults)"
 					(directBadgeAward)="routeToBadgeAward($event, issuer)"
 					(qrCodeAward)="routeToQRCodeAward($event, issuer)"
 					(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, issuer, $event.focusRequests)"
@@ -317,8 +316,8 @@
 						[badgeImage]="badge.badge.image"
 						[badgeDescription]="badge.badge.description"
 						[badgeSlug]="badge.badge.slug"
-						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.badge.issuer"
-						[badgeIssueDate]="badge.badge.createdAt"
+						[issuerTitle]="badge.issuerName"
+						[badgeIssueDate]="$any(badge.badge).created_at"
 						[public]="true"
 						[publicUrl]="`../../public/badges/${badge.badge.slug}`"
 					></bg-badgecard>
