--- a/src/app/issuer/components/qrcode-awards/qrcode-awards.component.html
+++ b/src/app/issuer/components/qrcode-awards/qrcode-awards.component.html
@@ -1,4 +1,4 @@
-<div class="oeb tw-mt-4">
+<div class="oeb">
 	@if (awards.length === 0) {
 		<div class="tw-flex tw-flex-col tw-gap-2">
 			<h3 hlmH3 class="tw-text-purple tw-font-bold tw-uppercase">{{ 'QrCode.qrAwards' | translate }}</h3>
